@@ -1,3 +1,9 @@
+2008-04-19  Benhur Stein <benhur@inf.ufsm.br>
+    * AggregatingFilter/AggregatingChunkArray.m General/EntityChunk.h
+      General/EntityChunk.m PajeEventDecoder/PajeEventDecoder.h
+      PajeEventDecoder/PajeEventDecoder.m PajeSimulator/SimulChunk.h
+      PajeSimulator/SimulChunk.m: chunk code cleanup
+
 2008-03-07  Benhur Stein <benhur@inf.ufsm.br>
     * General/: correct some #includes
 
